# ohos_leveldb

./: README.md  build-profile.json5  deploy.sh
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
leveldb/: CHANGELOG.md  Index.ets  README.md  oh-package-lock.json5  oh-package.json5
leveldb/example/: usage.md
leveldb/src/main/: module.json5
leveldb/src/main/cpp/: CMakeLists.txt  LevelDB.cpp  LevelDB.h  napi_init.cpp
leveldb/src/main/cpp/types/libleveldb/: Index.d.ts  oh-package.json5
leveldb/src/main/ets/: LevelDB.ets
leveldb/src/ohosTest/: module.json5
